--- a/app/scss/pages/_ver-boleta.scss
+++ b/app/scss/pages/_ver-boleta.scss
@@ -3,7 +3,7 @@ body {
     background-position: top center;
     background-repeat: no-repeat;
     /* &.page-boleta {
-         background-image: url(../images/m-boleta-1.jpg);
+         background-image: url(../images/m-boleta-3.jpg);
          background-position: 0 0;
          .content-page {
             background-color: transparent; 
@@ -21,6 +21,7 @@ body {
     font-weight: bold;
     display: inline-block;
     line-height: 1;
+    text-align: center;
     width: 135px;
 }
 
@@ -35,6 +36,7 @@ body {
     display: inline-block;
     line-height: 1;
     text-align: center;
+    width: 135px;
 }
 
 .btn-carga {
