se agrega page notificaciones aporte

--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -5355,6 +5355,7 @@ body {
   font-size: 14px;
   line-height: 17px;
   margin-bottom: 4px;
+  text-align: justify;
 }
 .row-detalle-notifica .texto-notifica .subtitle-notifica span {
   font-weight: bold;
