--- a/app/scss/pages/_notificaciones.scss
+++ b/app/scss/pages/_notificaciones.scss
@@ -21,6 +21,7 @@
             font-size: 14px;
             line-height: 17px;
             margin-bottom: 4px;
+            text-align: justify;
             span {
                 font-weight: bold;
             }
