--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -3109,6 +3109,10 @@ a {
   border: 1px solid lightgray;
 }
 
+.text-green {
+  color: #19CE74;
+}
+
 /* Mixins
   =============== */
 .contenedor {
