--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -283,7 +283,7 @@
     border-bottom: 1px solid #BDBDBD;
     &.hover-delete {
         position: relative;
-        .circle-notifica {
+        .circle-notifica, .circle-foto, .circle-alert {
             position: relative;
             left: -45px;
         }
@@ -373,9 +373,49 @@
     margin-right: 10px;
 }
 
+.circle-foto {
+    width: 54px;
+    height: 54px;
+    background: $blue;
+    border-radius: 100%;
+    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 54px;
+    margin-right: 10px;
+}
+
 .circle-check {
     width: 45px;
     height: 45px;
+   /*  background: $green; */
+    border-radius: 100%;
+    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 45px;
+    margin-right: 10px;
+}
+
+.circle-alert {
+    width: 45px;
+    height: 45px;
+    background: #FF8B8B;
+    border-radius: 100%;
+    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 45px;
+    margin-right: 10px;
+}
+
+.circle-puente {
+    width: 45px;
+    height: 45px;
+    background: #FFD58B;
     border-radius: 100%;
     display: block;
     display: flex;
