add page notificaciones 7

--- a/app/scss/pages/_notificaciones.scss
+++ b/app/scss/pages/_notificaciones.scss
@@ -41,6 +41,19 @@
     min-width: 55px;
 }
 
+.circle-detalle-alert {
+    width: 55px;
+    height: 55px;
+    background: #FF8B8B;
+    border-radius: 100%;
+    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 55px;
+}
+
+
 .row-btn-notifica {
     width: 100%;
     margin-top: 100px;
