--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -5446,6 +5446,24 @@ body {
   min-width: 55px;
 }
 
+.circle-detalle-alert {
+  width: 55px;
+  height: 55px;
+  background: #FF8B8B;
+  border-radius: 100%;
+  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-width: 55px;
+}
+
 .row-btn-notifica {
   width: 100%;
   margin-top: 100px;
