--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -188,3 +188,22 @@
         margin-right: 10px;
     }
 }
+
+.btn-verde-img {
+    color:white;
+    background-color: $green;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    &:hover {
+        color:white;
+        background-color: $green-dark;
+    }
+    i {
+        margin-left: 10px;
+    }
+}
