--- a/app/scss/pages/_ver-boleta.scss
+++ b/app/scss/pages/_ver-boleta.scss
@@ -1,7 +1,7 @@
 
 body {
-    background-position: top center;
-    background-repeat: no-repeat;
+   /*  background-position: top center;
+    background-repeat: no-repeat; */
     /* &.page-boleta {
          background-image: url(../images/m-boleta-3.jpg);
          background-position: 0 0;
