--- a/app/scss/pages/_pago.scss
+++ b/app/scss/pages/_pago.scss
@@ -1,7 +1,7 @@
 .page-pago {
     /* border:1px solid red; */
     background-image: url(../images/page-pago1.jpg);
-    background-position: 0 0;
+    background-position: top center;
     .content-page {
         background-color: transparent; 
     }
